--- a/html-css-course/intro-to-html/lessons/10/10a.css
+++ b/html-css-course/intro-to-html/lessons/10/10a.css
@@ -15,6 +15,7 @@
     object-fit: cover;
     border-radius: 50%;
     margin-right: 12px;
+    cursor: pointer;
 }
 
 .profile-info {
@@ -44,4 +45,5 @@
     width: 80px;
     height: 35px;
     border-radius: 6px;
+    cursor: pointer;
 }
