--- a/html-css-course/styles/header.css
+++ b/html-css-course/styles/header.css
@@ -13,6 +13,8 @@
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: rgb(228, 228, 228);
+
+    z-index: 100;
 }
 
 .left-section {
@@ -96,8 +98,28 @@
 .youtube-apps-icon{
     height: 24px;
 }
+.notifications-icon-container {
+    position: relative;
+}
 .notifications-icon{
     height: 24px;
+}
+.notifications-count {
+    position: absolute;
+    top: -2px;
+    right: -5px;
+    background-color: rgb(200, 0, 0);
+    color: white;
+    
+    font-family: Roboto, Arial;
+    font-size: 11px;
+
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+
+    border-radius: 50%;
 }
 
 .current-user-picture{
