--- a/html-css-course/styles/general.css
+++ b/html-css-course/styles/general.css
@@ -8,6 +8,8 @@ p {
 body {
     margin: 0;
     padding-top: 80px;
-    padding-left: 80px;
-    height: 3000px;
+    padding-left: 96px;
+    padding-right: 24px;
+
+    background-color: rgb(252, 250, 250);
 }
