--- a/html-css-course/styles/general.css
+++ b/html-css-course/styles/general.css
@@ -1,11 +1,17 @@
 p {
-    /*font stack - font backup in case Roboto fail to load is going for Arial*/
-    font-family: Roboto, Arial;
     margin-top: 0;
     margin-bottom: 0;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 body {
+    /*font stack - font backup in case Roboto fail to load is going for Arial*/
+    font-family: Roboto, Arial;
+
     margin: 0;
     padding-top: 80px;
     padding-left: 96px;
