--- a/html-css-course/styles/video.css
+++ b/html-css-course/styles/video.css
@@ -25,14 +25,10 @@
     position: relative;
 }
 .video-time {
-    font-family: Roboto, Arial;
     font-size: 12px;
     font-weight: 500;
     
-    padding-left: 4px;
-    padding-right: 4px;
-    padding-top: 4px;
-    padding-bottom: 4px;
+    padding: 4px;
 
     border-radius: 2px;
     
@@ -58,4 +54,22 @@
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 16px;
     row-gap: 40px;
+}
+
+@media (max-width: 750px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 751px) and (max-width: 999px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1000px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
