--- a/html-css-practice/linkedin/style/header.css
+++ b/html-css-practice/linkedin/style/header.css
@@ -2,6 +2,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    background-color: white;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    height: 75px;
+
+    z-index: 1000;
 }
 
 .left-section {
