--- a/html-css-practice/linkedin/style/header.css
+++ b/html-css-practice/linkedin/style/header.css
@@ -1,6 +1,6 @@
 .header {
     display: flex;
-    align-items: center;
+    flex-direction: row;
     justify-content: space-between;
 
     background-color: white;
@@ -12,70 +12,48 @@
 
     height: 50px;
 
-    z-index: 1000;
+    font-size: 12px;
+    z-index: 100;
 }
-
 .left-section {
     display: flex;
     align-items: center;
-
-    margin-left: 350px;
 }
-
-.search-container {
-    margin-left: 10px;
-    margin-bottom: 4px;
-}
-
-.search-bar {
-    width: 250px;
+.search {
     height: 30px;
-    padding-left: 10px;
+    width: 200px;
 
     border: none;
     border-radius: 5px;
-    background-color: rgb(232, 241, 245);
+    background-color: rgb(220, 235, 240);
 
-    box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+    padding-left: 15px;
 }
 
 .middle-section {
     display: flex;
-    justify-content: center;
+    flex-direction: row;
     align-items: center;
-    
-    border-right:  1px solid lightgray;
-}
+    justify-content: space-between;
+    flex: 1;
 
-.icon-link {
+    max-width: 500px;
+}
+.header-link {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-
-    margin-right: 35px;
-
-    cursor: pointer;
+    justify-content: center;
 }
-
-.icon-link div {
-    font-family: Arial;
-    font-size: 12px;
-}
-
-.profile-picture-header {
+.header-link img {
     width: 25px;
-    height: 25px;
-
+}
+.header-profile {
     border-radius: 50%;
 }
 
 .right-section {
     display: flex;
-    margin-right: 350px;
-}
-
-.in-premium {
-    color: rgb(172, 147, 9);
-    font-size: 16px;
+    flex-direction: row;
+    align-items: center;
 }
