--- a/html-css-practice/linkedin/style/general.css
+++ b/html-css-practice/linkedin/style/general.css
@@ -1,5 +1,5 @@
 body {
     height: 3000px;
-    background-color: lightgray;
+    background-color: rgb(243, 239, 239);
     font-family: Arial;
 }
