--- a/html-css-practice/linkedin/style/general.css
+++ b/html-css-practice/linkedin/style/general.css
@@ -3,3 +3,17 @@ body {
     background-color: rgb(243, 239, 239);
     font-family: Arial;
 }
+
+.main-side {
+    width: 600px;
+
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
+.main-container {
+    display: flex;
+    justify-content: center;
+
+    margin-top: 70px;
+}
