--- a/html-css-practice/linkedin/style/header.css
+++ b/html-css-practice/linkedin/style/header.css
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
 
     background-color: white;
 
@@ -18,10 +18,12 @@
 .left-section {
     display: flex;
     align-items: center;
+
+    margin-right: 150px;
 }
 .search {
     height: 30px;
-    width: 200px;
+    width: 250px;
 
     border: none;
     border-radius: 5px;
@@ -34,16 +36,19 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     flex: 1;
 
     max-width: 500px;
+
+    border-right: 1px solid lightgray;
 }
 .header-link {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+
+    margin-right: 40px;
 }
 .header-link img {
     width: 25px;
@@ -56,4 +61,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    margin-left: 10px;
 }
