--- a/html-css-practice/samples/non-profit org/style.css
+++ b/html-css-practice/samples/non-profit org/style.css
@@ -11,101 +11,73 @@ body {
     height: 3000px;
 }
 
-/*Nav bar section*/
-/* header {
+/*initial container*/
+.init-container {
+    height: 800px;
+
     display: flex;
-} */
-
-header nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 150px;
-
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 1rem;
-
-    background-color: black;
-    background: rgba(0, 0, 0, 0.2);
-    gap: 2rem;
-}
-header nav ul {
-    display: flex;
-    list-style: none;
-    gap: 2rem;
-}
-header nav ul li {
-    font-size: 20px;
-}
-header nav ul li a {
-    color: white;
-}
-header nav button {
-    background-color: #60cd70;
-    border: none;
-    color: white;
-    width: 130px;
-    height: 50px;
-    border-radius: 25px;
-
-    font-size: 20px;
-    font-weight: 500;
-}
-
-
-/*Initial section with background*/
-.init-section {
-    display: flex;
-    align-items: center;
     justify-content: center;
 
     overflow: hidden;
-    height: 850px;
-
-    margin-bottom: 5rem;
+    position: relative;
 }
-.init-section .background {
-    margin: auto;
+.init-container .background-image{
     width: 100%;
     height: 100%;
+
     object-fit: cover;
+    object-position: top;
 }
-.init-section .text-on-background {
+
+.init-container .container-absolute {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 10px;
+    bottom: 0;
+    
     display: flex;
     flex-direction: column;
-    align-items: center;
-    
-    color: white;
-    position: absolute;
-}
-.init-section .text-on-background h3{
-    font-weight: 500;
-    font-size: 5rem;
-    margin-bottom: 35px;
-}
-.init-section .text-on-background .user-graduate-icon {
-    width: 100px;
-    margin-bottom: 35px;
-}
-.init-section .text-on-background span {
-    font-size: 25px;
-    font-weight: 300;
 }
 
-/*Video preview section*/
-.video-preview {
+.init-container .container-absolute nav {
     display: flex;
     justify-content: center;
-    
-    width: 70%;
-    margin: auto;
+    align-items: center;
+    gap: 20px;
 
-    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 10px;
+}
+.init-container .container-absolute nav ul{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    list-style-type: none;
+}
+.init-container .container-absolute nav ul li{
+    font-size: 20px;
+    font-weight: 500;
+}
+.init-container .container-absolute nav ul li a{
+    color: white;
 }
 
-.video-preview img {
-    width: 100%;
-    object-fit: cover;
+.init-container .container-absolute .description {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.init-container .container-absolute .description img{
+    width: 100px;
+}
+.init-container .container-absolute .description h3{
+    font-weight: bolder;
+    font-size: 2rem;
 }
