--- a/html-css-practice/samples/non-profit org/style.css
+++ b/html-css-practice/samples/non-profit org/style.css
@@ -175,6 +175,9 @@ section {
 
     cursor: pointer;
 }
+.more-description-container .who-we-are-btn:hover {
+    background-color: #d6cab4;
+}
 .more-description-container .divider {
     border: 1px thin #000;
     margin: 40px 40px;
