adjusted space between elements on the initial container

--- a/html-css-practice/samples/non-profit org/style.css
+++ b/html-css-practice/samples/non-profit org/style.css
@@ -98,6 +98,7 @@ body {
 
 .init-container .container-absolute .description * {
     margin-bottom: 25px;
+    padding-bottom: 25px;
 }
 
 .init-container .container-absolute .description img {
