--- a/html-css-practice/samples/non-profit org/style.css
+++ b/html-css-practice/samples/non-profit org/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    height: 6000px;
+    height: 8000px;
 }
 
 .initial-section {
@@ -524,4 +524,87 @@ body {
     color: white;
 
     cursor: pointer;
+}
+
+.donate-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    height: 600px;
+
+    margin: auto;
+}
+
+.donate-container .button-container {
+    display: flex;
+    margin-bottom: 40px;
+}
+
+.donate-btn {
+    width: 200px;
+    height: 50px;
+
+    background-color: #61CE70;
+    border-radius: 25px;
+    border: none;
+
+    color: white;
+    font-weight: 500;
+    font-size: 16px;
+
+    cursor: pointer;
+}
+
+.make-a-difference-container {
+    display: flex;
+    gap: 30px;
+    
+    width: 60%;
+    height: 100%;
+
+}
+.make-a-difference-container .left-side {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+.make-a-difference-container .left-side .image-container {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.make-a-difference-container .left-side .image-container img{
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
+.make-a-difference-container .left-side h5 {
+    font-weight: 400;
+    font-size: 20px;
+}
+.make-a-difference-container .left-side p {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 20px;
+}
+
+.make-a-difference-container .right-side {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+.make-a-difference-container .right-side .header-right-side{
+    background-color: #61CE70;
+    height: 50px;
+
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+.make-a-difference-container .right-side .header-right-side span{
+    font-weight: 500;
+    font-size: 18px;
 }
