--- a/js-course/lesson31/style.css
+++ b/js-course/lesson31/style.css
@@ -21,8 +21,9 @@ body {
     font-weight: bolder;
 }
 
-#textInput {
+#textBox {
     text-align: center;
+    
     height: 20px;
     margin: auto;
 }
