--- a/html-css-practice/logins/login-web-form-sample/style.css
+++ b/html-css-practice/logins/login-web-form-sample/style.css
@@ -6,17 +6,24 @@
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: seagreen;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: url('img/img.jpg') no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .wrapper {
   width: 420px;
-  background-color: purple;
+  background-color: transparent;
+  border: 2px solid rgba(255, 255, 255, .2);
+  backdrop-filter: blur(20px);
+  box-shadow: 0 0 10px rgba(0, 0, 0, .2);
   color: white;
+  border-radius: 10px;
+  padding: 30px 40px;
 }
 
 .wrapper h1 {
@@ -77,5 +84,40 @@ body {
   text-decoration: none;
 }
 .remember-forget a:hover{
+  text-decoration: underline;
+}
+
+.wrapper button {
+  width: 100%;
+  height: 45px;
+  background: #fff;
+
+  border: none;
+  outline: none;
+
+  border-radius: 40px;
+
+  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+
+  cursor: pointer;
+
+  font-size: 16px;
+  color: #333;
+  font-weight: 600;
+}
+
+.wrapper .register-link {
+  font-size: 14.5px;
+  text-align: center;
+  margin: 20px 0 15px;
+}
+
+.register-link p a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.register-link p a:hover {
   text-decoration: underline;
 }
