--- a/html-css-practice/samples/fox-group/style.css
+++ b/html-css-practice/samples/fox-group/style.css
@@ -12,9 +12,9 @@ html, body {
 }
 
 header {
-    background-color: rgb(87, 87, 87);
+    background-color: rgb(65, 65, 65);
     color: white;
-    font-size: 20px;
+    font-size: 22px;
     height: 70px;
 
     text-align: center;
@@ -37,6 +37,8 @@ nav, ul {
 nav ul li {
     display: inline-block;
     margin: 0 50px 0 50px;
+
+    cursor: pointer;
 }
 
 /* 
@@ -47,7 +49,7 @@ section {
 
 main {
     width: 100%;
-    height: 800px;
+    height: 1300px;
 
     position: relative;
     top: 70px;
@@ -55,29 +57,49 @@ main {
 
 .home-main {
     width: 100%;
-    height: 70%;
-    border: 1px solid red;
+    height: 1000px;
 
-    background-image: url('img/background-genova.jpeg');
+    background-image: linear-gradient(
+        to bottom,
+        rgba(90, 90, 80, 0.5),
+        rgba(78, 78, 252, 0.274)
+      ), url('img/background-image.jpg');
     background-size: cover;
     background-position: center;
 
     color: white;
     text-align: center;
+
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .intro {
-    font-size: 30px;
     width: 50%;
     height: 100%;
     margin: auto;
+
+    position: absolute;
+    top: 80px;
+}
+.intro h1 {
+    font-size: 120px;
+}
+.intro span {
+    color: rgb(207, 6, 6);
+}
+.intro p {
+    font-size: 40px;
+    font-weight: 600;
 }
 
 
 .services {
     width: 100%;
-    height: 30%;
-    border: 1px solid red;
+    height: 300px;
     
     text-align: center;
 
@@ -86,30 +108,52 @@ main {
     align-items: center;
 
     padding-bottom: 30px;
+
+    gap: 100px;
 }
 
 .col {
-    border: 1px solid red;
     width: 200px;
-    height: 90%;
+    height: 70%;
 
-    margin: 0 20px;
+    /* margin: 0 20px; */
+
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .col img {
     width: 50px;
     height: 50px;
 }
 .col button {
-    width: 60px;
+    width: 80px;
     height: 30px;
     color: black;
     border: none;
-    border-radius: 30px;
-    background-color: rgba(224, 94, 13, 0.579);
+    background-color: rgba(245, 81, 22, 0.76);
+    border-radius: 4px;
+
+    position: absolute;
+    bottom: 0;
+
+    font-size: 18px;
+    font-weight: 500;
+
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.8);
+
+    cursor: pointer;
+
+    transition: background-color 0.5s;
+}
+.col button:hover {
+    background-color: rgba(187, 57, 10, 0.76);
 }
 
 footer {
-    background-color: rgb(87, 87, 87);
+    background-color: rgb(65, 65, 65);
     color: white;
     height: 40px;
 
@@ -123,3 +167,10 @@ footer {
     justify-content: center;
     align-items: center;
 }
+
+
+/*
+todo: fare responsive
+- width: 640 max
+*/
+
