--- a/html-css-practice/logins/login-sample/style.css
+++ b/html-css-practice/logins/login-sample/style.css
@@ -57,7 +57,8 @@ body{
     flex-direction: column;
     justify-content: center;
 }
-.form-login .email input {
+.form-login .email input,
+.form-login .password input {
     width: 400px;
     height: 50px;
 
@@ -103,7 +104,8 @@ a:hover {
     right: 5%;
     gap: 50px;
 }
-.next {
+.next,
+.sign-in {
     width: 70px;
     height: 35px;
 
@@ -117,4 +119,7 @@ a:hover {
 }
 .next:hover {
     background-color: rgb(16, 71, 200);
+}
+.next:active {
+    background-color: rgb(17, 59, 157);
 }
