fix band section left

--- a/html-css-practice/samples/CvSample/style.css
+++ b/html-css-practice/samples/CvSample/style.css
@@ -158,6 +158,7 @@ main {
     
     .contacts, .education, .language {
         text-align: center;
+        margin: 0;
     }
 
     .section-right .head {
